fixing spacing, so now when the seconds change the width of that element will rest the same.

--- a/index.css
+++ b/index.css
@@ -53,6 +53,12 @@ h1 {
 
 .flex {
     display: flex;
+    justify-content: center;
+}
+
+.flex > .mwidth {
+    /* background: blue; */
+    min-width: 5rem;
 }
 
 
